# setup.cfg file at the root directory
[metadata]
name = pcf8574-library
version = 0.0.2
author = Renzo Mischianti
description = PCF8574 micropython library. i2c digital expander for Arduino, Raspberry Pi Pico and rp2040 boards, esp32, SMT32 and ESP8266
long_description = PCF8574 micropython library. i2c digital expander for Arduino, Raspberry Pi Pico and rp2040 boards, esp32, SMT32 and ESP8266. Can read write digital values with only 2 wire. Very simple to use
url = https://github.com/xreef/PCF8574_micropython_library
keywords = micropython, digital, i2c, encoder, expander, pcf8574, pcf8574a, esp32, esp8266, stm32, SAMD, Arduino, wire, rp2040, Raspberry
[options]
python_requires = >=3.7
# install_requires =
#     pandas
# [options.extras_require]
# test =
#     pytest
#     coverage
[options.package_data]
sample = ['examples/*']
[options.packages.find]
where = src
# [options.entry_points]
# console_scripts =
#     sample=sample:main
# [bdist_wheel]
# universal = 1

